# aws-stepfunctions-toolkit

./: .gitignore  .gitleaks.toml  .pre-commit-config.yaml  .readthedocs.yaml  .secrets.baseline  Makefile  NOTICE  README.md  ThirdPartyNotices.txt  example.env  example.uv.toml  examples.py  generate_third_party_notices.sh  issues.md  main.py  ossconfig.yaml  pyproject.toml
.claude/: CLAUDE.md
.claude/commands/: release.md  run-tests.md
.claude/skills/release-local/: SKILL.md
.claude/skills/releasing/: SKILL.md
.claude/skills/run-tests/: SKILL.md
.github/workflows/: ci.yml  release.yml
.kiro/agents/: agent.json
.kiro/knowledge/: amazon_state_language.md  history_events.md
.kiro/prompts/: prompt.md
.kiro/settings/: mcp.json
.kiro/steering/: product.md  structure.md  tech.md
aws_stepfunctions_toolkit/: __init__.py  batch_job_interface.py  cli.py  definition.py  history.py  strategies.py  testing.py  workflow_runner.py
aws_stepfunctions_toolkit/workflow_runner/: __init__.py  _common.py  image_sources.py  models.py  strategies.py  workflow_runner.py
docs/: cli-and-history.md  conf.py  container-handler.md  control-flow.md  how-it-works.md  index.md  overview.drawio  reference.md  setup.md  strategies.md  usage.md
examples/: README.md  docker-bake.hcl  main.asl.json  process_definition.py  run_tests.py
examples/advanced-deployed/: README.md  run.py
examples/advanced-deployed/infra/: template.yaml
examples/advanced-deployed/job/: main.py
examples/asl_definitions/: child.asl.json  main.asl.json
examples/container-handler/: README.md  run.py  state_machine.asl.json
examples/container-handler/job/: main.py
examples/data-flow/: README.md  run.py  state_machine.asl.json
examples/docker-batch/: README.md  docker-bake.hcl  run.py  run_tests.py  run_with_overrides.py
examples/docker-batch/asl_definitions/: main.asl.json
examples/docker-batch/project_file/example_batch_1/src/: main.py
examples/docker-batch/project_file/example_batch_2/: Dockerfile
examples/docker-batch/project_file/example_batch_2/src/: main.py
examples/docker-lambda/: README.md  run.py
examples/docker-lambda/asl_definitions/: main.asl.json
examples/docker-lambda/project_file/echo_lambda/: Dockerfile  app.py
examples/local-subprocess/: README.md  run.py  state_machine.asl.json
examples/local-subprocess/job/: main.py
examples/map-parallel/: README.md  run.py  state_machine.asl.json
examples/mock-generation/: README.md  run.py
examples/project_file/example_batch_1/: Dockerfile  pyproject.toml
examples/project_file/example_batch_1/src/: main.py
examples/project_file/example_batch_2/: pyproject.toml
examples/project_file/example_lambda_1/: Dockerfile  pyproject.toml
examples/project_file/example_lambda_1/src/example_lambda_1/: main.py
examples/quickstart/: README.md  run.py  state_machine.asl.json
examples/sub-range/: README.md  run.py  state_machine.asl.json
scripts/: generate_third_party_notices.sh  publish.py
tests/: conftest.py
tests/examples/: test_examples.py
tests/unit/: test_batch_job_interface.py  test_image_sources.py  test_models.py  test_runner_logic.py  test_strategies.py
