[project]
name = "aws-stepfunctions-toolkit"
dynamic = ["version"]
authors = [
    { name = "Roy Assis", email = "roya@cgen.com" },
    { name = "Compugen", email = "noreply@cgen.com" },
]
description = "POC for using AWS Step Functions test API for testing state machines locally using mock data"
readme = "README.md"
requires-python = "==3.13.*"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "boto3>=1.42.12",
    "boto3-stubs[stepfunctions]>=1.42.12",
    "pydantic>=2.0",
    "pydantic-settings>=2.12.0",
    "typer>=0.20.0",
    "typing-extensions>=4.9.0",
    "jmespath>=1.0.0",
    "mypy-boto3-s3>=1.42.37",
    "mypy-boto3-appconfigdata>=1.42.3",
    "python-on-whales>=0.80.0",
    "mypy-boto3-batch>=1.42.47",
]

[project.optional-dependencies]
examples = [
    "pytest>=8.0.0",
    "aws_lambda_powertools"
]
# Documentation site (Sphinx + MyST Markdown + Furo). Installed by Read the Docs
# (see .readthedocs.yaml) and the CI docs job. `pip install .[docs]` pulls these.
docs = [
    "sphinx>=8.1",
    "myst-parser>=4.0",
    "furo>=2024.8",
    "sphinx-copybutton>=0.5",
]

[project.scripts]
sfn-toolkit = "aws_stepfunctions_toolkit.cli:main"

[dependency-groups]
dev = [
    "poethepoet>=0.37.0",
    "ruff>=0.1.8",
    "black>=23.12.0",
    "ipykernel>=7.1.0",
    "ipython>=9.8.0",
    "notebook>=7.5.0",
    "pytest>=8.0.0",
    "pytest-xdist>=3.5.0",
    "python-dotenv>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/compugen-ltd/aws-stepfunctions-toolkit"

[build-system]
requires = ["setuptools>=61.0", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

# Version is derived from the latest git tag (e.g. tag `v0.2.0` -> version 0.2.0).
# Single source of truth: the tag. No version string is kept in this file.
# `fallback_version` is used only when building outside a git checkout with no
# SCM metadata (e.g. an already-unpacked sdist that lacks PKG-INFO).
[tool.setuptools_scm]
fallback_version = "0.0.0"

[tool.setuptools.packages.find]
include = ["aws_stepfunctions_toolkit*"]

[tool.setuptools.package-data]
aws_stepfunctions_toolkit = ["py.typed"]


# uv configuration (indexes, keyring) is kept in a gitignored `uv.toml` so the
# private package index / account ID never lands in the public repo. uv reads a
# project-root `uv.toml` automatically, and it takes precedence over any
# `[tool.uv]` here. See `example.uv.toml` for the template; copy it to `uv.toml`.


[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: end-to-end tests that call the real test_state API (need AWS creds + ROLE_ARN)",
    "docker: integration tests that also require a running Docker daemon",
]
filterwarnings = [
    "ignore:.*ssl.*deprecated.*",
    "ignore::requests.RequestsDependencyWarning",
    "ignore::DeprecationWarning:testcontainers.*",
    "ignore::FutureWarning:tiledbsoma.*",
    "ignore:Transforming to str index.*"
]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s %(levelname)s %(name)s: %(message)s"
