[project]
name = "check_conditions"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.13.*"
dependencies = [
    "aws-lambda-powertools[tracer]>=3.23.0",
    "boto3",
    "aioboto3>=13.0.0",
    "types-aioboto3[stepfunctions]",
    "pydantic"
]

[[tool.uv.index]]
name = "aws"
url = "https://aws@cgen-000000000000.d.codeartifact.us-east-1.amazonaws.com/pypi/cgen-pypi/simple/"

[tool.uv]
keyring-provider = "subprocess"

[tool.uv.sources]
"unigen-commons" = { index = "aws" }